dev/test_programs/INVALID/group10/parser/op_assign.go
package main;


var (
	square = 1764
)

func main() {
	x := float64(square/2)
	x,square += square,x

}
